--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,7 @@ test:
 production:
   primary:
     <<: *default
+    url: <%= ENV ["DATABASE_URL"] %>
     database: storage/production.sqlite3
   cache:
     <<: *default
